Added secondary navigation to template

--- a/template.conf
+++ b/template.conf
@@ -40,6 +40,10 @@
     {
       "title": "Main Navigation",
       "name": "mainNav"
+    },
+    {
+      "title": "Secondary Navigation",
+      "name": "secondaryNav"
     }
   ],
   "systemCollections": [
