Added secondary navigation block

--- a/template.conf
+++ b/template.conf
@@ -57,7 +57,8 @@
     "font-awesome.css",
     "global.css",
     "mobile.css",
-    "mobile-nav.css"
+    "mobile-nav.css",
+    "halorituals.com.less"
   ],
   "systemPartials": [
     "sqs-social-links"
