Add sr-only CSS

--- a/template.conf
+++ b/template.conf
@@ -55,6 +55,7 @@
   "stylesheets": [
     "sqs-video-background.less",
     "font-awesome.css",
+    "sr-only.css",
     "global.css",
     "mobile.css",
     "mobile-nav.css",
