--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "authserver": "squarespace runserver --auth",
     "start": "squarespace setup && (npm run watch & npm run server)",
     "start:auth": "squarespace setup && (npm run watch & npm run authserver)",
-    "deploy": "npm run clean && npm run build && squarespace setup && squarespace deploy"
+    "deploysite": "squarespace setup && squarespace deploy",
+    "deploy:prod": "npm run clean && cross-env NODE_ENV=production && npm run build && npm run deploysite",
+    "deploy": "npm run clean && npm run build && npm run deploysite"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "dotenv": "^2.0.0",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "cross-env": "^5.2.0"
   }
 }
